--- a/css/redactText.css
+++ b/css/redactText.css
@@ -7,3 +7,15 @@
     display: flex;
     align-items: center;
 }
+.swiper-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.inline-swiper-slide {
+    padding: 20px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
